--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"outDir": "./",
 		"module": "commonjs",
-		"target": "ES2020",
+		"target": "esnext",
 		"lib": ["ESNext"],
 		"alwaysStrict": true,
 		"strict": true,
@@ -10,7 +10,7 @@
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"types": ["@types/node", "@types/ws"],
-		"resolveJsonModule": true
+		"resolveJsonModule": true,
 	},
 	"include": ["*.ts"],
 	"exclude": ["node_modules/"]
